--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-	<title>Akshaya Ravi</title>
+	<title>Mental Health Quiz</title>
 	<style>
 		body{
 			font-family: 'Open Sans', sans-serif;
@@ -12,6 +12,9 @@
 		}
 		h1{
 			font-size: 50px;
+		}
+		h3{
+			font-size: 30px;
 		}
 		#nav{
 			height: 75px;
@@ -59,7 +62,7 @@
 		#hero{
 			position: relative;
 			width: 100%;
-			height: 700px;
+			height: 850px;
 			margin-bottom: 0px;
 			background-color: rgb(255, 255, 240); /*rgb(236, 235, 228);/* rgb(255, 255, 240); /*rgb(120, 133, 133);*/
 		}
@@ -171,7 +174,7 @@
 		  bottom: 0;
 		  left: 0;
 		  right: 0;
-		  height: 100%;
+		  height: 300%;
 		  width: 100%;
 		  opacity: 0;
 		  transition: .5s ease;
@@ -218,7 +221,7 @@
 <body>
 	<div id="nav">
 		<!--<a href="index3.html"> <img src="images/AR.png"> </a>-->
-		<a href = "index3.html"> <h1>Title here</h1> </a>
+		<a href = "index3.html"> <h1>Mental Health Quiz</h1> </a>
 		<ul>
 			<li id="about"><a href="#">ABOUT</a></li>
 			<li><a href="#">TAKE THE QUIZ</a></li>
@@ -228,7 +231,7 @@
 	<div id="hero">
 		<div id="text-box">
 			<h1>Welcome</h1>
-			<p>feeling a little off? take our quiz and use our tracker to learn more about what's going on.</p>
+			<h3>Do you not feel like yourself lately? Take our quiz and use our tracker to learn more about what's going on.</h3>
 		</div>
 
 		<div class="scroll">
@@ -251,7 +254,6 @@
 		  <div class="overlay">
 		    <div class="text">
 		    	<h1> About </h1>
-		    	<p> jdlkasjdkajkldajskl </p>
 			</div>
 		  </div>
 		</div>
@@ -261,7 +263,6 @@
 		  <div class="overlay">
 		    <div class="text">
 		    	<h1> Contact </h1>
-		    	<p> jdlkasjdkajkldajskl </p>
 			</div>
 		  </div>
 		</div>
