--- a/quiz.html
+++ b/quiz.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .quiz{
+            align-self: center;
+        }
+        .submit{
+            border: 5px outset red;
+            background-color: lightblue;    
+            text-align: center;
+        }
+        .results{
+            align-self: center;
+        }
+    </style>
 </head>
 <body>
-    <div id="quiz" class= ></div>
+    <div id="quiz"></div>
     <button id="submit">Submit Quiz</button>
     <div id="results"></div>
-    
 </body>
 </html>
