--- a/quiz.html
+++ b/quiz.html
@@ -1,27 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/quizstyle.css">
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .quiz{
-            align-self: center;
-        }
-        .submit{
-            border: 5px outset red;
-            background-color: lightblue;    
-            text-align: center;
-        }
-        .results{
-            align-self: center;
-        }
+      h1{
+      }
+      body{
+        color: darkgrey;
+        font-family: Comfortaa;
+        background-color: rgb(12, 12, 12);
+        text-align: center;
+      }
+      #previous {
+      background-color: #005EA0; /* Light Blue */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      font-family: Comfortaa;
+      }
+      #next {
+      background-color: #153265; /* Blue */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      font-family: Comfortaa;
+      }
+      #submit {
+      background-color: #4A6A51; /* Green */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      font-family: Comfortaa;
+      }
+      #centerbody{
+        height: 200px;
+        width: 500px;
+        padding: 13% 5%;
+        background-color: rgb(36, 36, 36);
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+      }
     </style>
 </head>
 <body>
-    <div id="quiz"></div>
-    <button id="submit">Submit Quiz</button>
-    <div id="results"></div>
+<div id="centerbody">
+  <h1>Quiz on Mental Health</h1>
+  Quiz goes here
+  <br><br>
+  <div class="quiz-container">
+  <div id="quiz"></div>
+  </div>
+  <button id="previous">Previous</button>
+  <button id="next">Next</button>
+  <button id="submit">Submit Quiz</button>
+  <div id="results"></div>
+</div>
 </body>
 </html>
