--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
 </head>
 <body>
 	<div id="nav">
-		<!--<a href="index3.html"> <img src="images/AR.png"> </a>-->
-		<a href = "index3.html"> <h1>Mental Health Quiz</h1> </a>
+		<!--<a href="quiz.html"> <img src="images/AR.png"> </a>-->
+		<a href = "quiz.html"> <h1>Mental Health Quiz</h1> </a>
 		<ul>
 			<li id="about"><a href="#">ABOUT</a></li>
-			<li><a href="#">TAKE THE QUIZ</a></li>
+			<li><a href="quiz.html">TAKE THE QUIZ</a></li>
 		</ul>
 	</div>
 
@@ -269,7 +269,7 @@
 	</div>
 
 	<footer>
-		<a href = "index3.html"> <p>Back to top</p> </a>
+		<a href = "quiz.html"> <p>Back to top</p> </a>
 	</footer>
 
 
