--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 	</div>
 
 	<footer>
-		<a href = "quiz.html"> <p>Back to top</p> </a>
+		<a href = "index.html"> <p>Back to top</p> </a>
 	</footer>
 
 
