--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 	<div id="hero">
 		<div id="text-box">
 			<h1>Welcome</h1>
-			<h3>Do you not feel like yourself lately? Take <a href="quiz.html">our quiz</a> and use our tracker to learn more about what's going on.</h3>
+			<h3>Do you not feel like yourself lately? Take <a href="quiz.html" style="color: red;">our quiz</a> and use our tracker to learn more about what's going on.</h3>
 		</div>
 
 		<div class="scroll">
