--- a/quiz.html
+++ b/quiz.html
@@ -57,9 +57,6 @@
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
       }
-      @import url(https://fonts.googleapis.com/css?family=Work+Sans:300,600);
-
-        }
         h1{
         font-weight: 300;
         margin: 0px;
@@ -82,7 +79,7 @@
         margin-bottom: 10px;
         }
         button{
-        font-family: 'Work Sans', sans-serif;
+        font-family: Comfortaa;
             font-size: 22px;
             background-color: #279;
             color: #fff;
