--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
       body{
-        color: darkgrey;
+        color: 78b3da;
         font-family: Comfortaa;
         background-color: rgb(12, 12, 12);
         text-align: center;
