--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,7 @@
       body{
         color: 78b3da;
         font-family: Comfortaa;
-        background-color: 78b3da;
+        background-color: #78b3da;
         text-align: center;
       }
       #previous {
