--- a/quiz.html
+++ b/quiz.html
@@ -7,9 +7,9 @@
     <title>Document</title>
     <style>
       body{
-        color: 78b3da;
+        color: black;
         font-family: Comfortaa;
-        background-color: #78b3da;
+        background-color: #9bd7ff;
         text-align: center;
       }
       #previous {
@@ -49,7 +49,7 @@
         height: 200px;
         width: 500px;
         padding: 13% 5%;
-        background-color: rgb(36, 36, 36);
+        background-color: #266097;
         margin: 0;
         position: absolute;
         top: 50%;
