--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500&display=swap" rel="stylesheet">
 	<title>Mental Health Quiz</title>
 	<style>
 		body{
-			font-family: 'Open Sans', sans-serif;
-			background-color: rgb(255, 255, 240);
+			font-family: 'Comfortaa', cursive;			
+			background-color: rgb(21, 50, 101);
 		}
 		h1{
 			font-size: 50px;
@@ -18,7 +19,7 @@
 		}
 		#nav{
 			height: 75px;
-			background-color: rgb(255, 255, 240); /*rgb(236, 235, 228);/*rgb(255, 255, 240);*/
+			background-color: #153265;/*#A9A9A9;/*rgb(255, 255, 240); /*rgb(236, 235, 228);/*rgb(255, 255, 240);*/
 			padding-top: 20px;
 			position: fixed;
 			padding-left: 20px;
@@ -32,21 +33,21 @@
 		#nav h1{
 			font-family: 'Open Sans', sans-serif;
 			float: left;
-			color: rgb(21, 50, 101); /*rgb(120, 133, 133); /*rgb(236, 235, 228);*/
+			color: #FFFFF0; /*rgb(21, 50, 101); /*rgb(120, 133, 133); /*rgb(236, 235, 228);*/
 		}
 		#nav li{
 			margin-top: 25px;
 			float: right;
 			margin-right: 30px;
-			border-left: solid rgb(0, 94, 160) 2px;
+			border-left: solid #FFFFF0 2px;
 			padding-left: 30px;
 		}
 		#nav li a{
-			color: rgb(21, 50, 101);
+			color: #FFFFF0;;
 			text-decoration: none;
 		}
 		#nav li a:hover{
-			color: rgb(0, 94, 160);
+			color: #FFFFF0;;
 		}
 		#nav ul{
 			list-style: none;
@@ -64,7 +65,7 @@
 			width: 100%;
 			height: 850px;
 			margin-bottom: 0px;
-			background-color: rgb(255, 255, 240); /*rgb(236, 235, 228);/* rgb(255, 255, 240); /*rgb(120, 133, 133);*/
+			background-color: #153265; /*rgb(236, 235, 228);/* rgb(255, 255, 240); /*rgb(120, 133, 133);*/
 		}
 		#hero img{
 			width: 100%;
@@ -105,8 +106,8 @@
 		    display: block;
 		    width: 30px;
 		    height: 30px;
-		    border-bottom: 5px solid #005ea0; /*#06A8FF;*/
-		    border-right: 5px solid #005ea0; /*#06A8FF;*/
+		    border-bottom: 5px solid #FFFFF0;/*#005ea0; /*#06A8FF;*/
+		    border-right: 5px solid #FFFFF0;/*#005ea0; /*#06A8FF;*/
 		    transform: rotate(45deg);
 		    margin: -10px;
 		    animation: animate 2s infinite;
@@ -133,12 +134,13 @@
 
 		#featured h1{
 			text-align: center;
-			color: rgb(21, 50, 101);
+			color: #FFFFF0;
 		}
 
 		#featured p{
 			text-align: center;
 			margin-top: 8px;
+			color: #FFFFF0;
 			/*color: rgb(0, 94, 160);*/
 		}
 
@@ -159,6 +161,7 @@
 		  float: left;
 		  margin-top: 30px;
 		  margin-right: 50px;
+		  margin-bottom: 50px;
 		}
 
 		.image {
@@ -174,19 +177,19 @@
 		  bottom: 0;
 		  left: 0;
 		  right: 0;
-		  height: 300%;
+		  height: 100%;
 		  width: 100%;
 		  opacity: 0;
 		  transition: .5s ease;
-		  background-color: rgb(21, 50, 101);
+		  background-color: #FFFFF0;
 		}
 
 		.container:hover .overlay {
-		  opacity: 0.9;
+		  opacity: 0.8;
 		}
 
 		.text {
-		  color: white;
+		  color: rgb(21, 50, 101);
 		  /*font-size: 20px;*/
 		  position: absolute;
 		  top: 50%;
@@ -206,6 +209,7 @@
 			padding-top: 10px;
 			padding-bottom: 5px;
 			bottom: 0;
+			margin-bottom: 0;
 			clear: both;
 			color: rgb(255, 255, 240);
 		}
@@ -220,8 +224,8 @@
 </head>
 <body>
 	<div id="nav">
-		<!--<a href="index3.html"> <img src="images/AR.png"> </a>-->
-		<a href = "index3.html"> <h1>Mental Health Quiz</h1> </a>
+		<!--<a href="index.html"> <img src="images/AR.png"> </a>-->
+		<a href = "index.html"> <h1>Mental Health Quiz</h1> </a>
 		<ul>
 			<li id="about"><a href="#">ABOUT</a></li>
 			<li><a href="#">TAKE THE QUIZ</a></li>
@@ -243,6 +247,7 @@
 	</div>
 
 	<div id="featured">
+
 		<h1> FEATURED </h1>
 		<h1> _________________ </h1>
 		<p> Hover over each picture to navigate this site. </p>
@@ -250,7 +255,7 @@
 
 	<div id="top-boxes">
 		<div class="container">
-		  <img src="images/times-square.jpg" alt="Avatar" class="image">
+		  <img src="images/stress.jpg" alt="Avatar" class="image">
 		  <div class="overlay">
 		    <div class="text">
 		    	<h1> About </h1>
@@ -259,7 +264,7 @@
 		</div>
 
 		<div class="container">
-		  <img src="images/socialmedia.jpg" alt="Avatar" class="image">
+		  <img src="images/heart.jpg" alt="Avatar" class="image">
 		  <div class="overlay">
 		    <div class="text">
 		    	<h1> Contact </h1>
@@ -267,15 +272,22 @@
 		  </div>
 		</div>
 	</div>
-
 	<footer>
-		<a href = "index3.html"> <p>Back to top</p> </a>
+		<a href = "index.html"> <p>Back to top</p> </a>
 	</footer>
 
 
 
 	<script>
-		var slideIndex = 0;
+		//importPackage("Packages.Users⁩.student⁩.Desktop⁩.mentalhealth⁩");
+
+
+		/*window.alert == null;
+		alert(validatePassword("akshaya", "ravi"));
+		delete window.alert; // true
+		alert(validatePassword("akshaya", "ravi")); // win*/
+		//document.getElementById("demo").innerHTML = validatePassword("akshaya", "ravi");
+		/*var slideIndex = 0;
 		carousel();
 
 		function carousel() {
@@ -288,15 +300,66 @@
 		  if (slideIndex > x.length) {slideIndex = 1}
 		  x[slideIndex-1].style.display = "block";
 		  setTimeout(carousel, 3000); // Change image every 2 seconds
-		}
+		}*/
+
+		/*object.addEventListener("click", myScript);
+		object.onclick = function(){myScript};
+		document.getElementById("button").onClick = function vp(){
+			alert("hello");
+			validatePassword("akshaya", "ravi");
+		}*/
 
 
-		$(function() {
+		/*$(function() {
 		  $('a[href*=#]').on('click', function(e) {
 		    e.preventDefault();
 		    $('html, body').animate({ scrollTop: $($(this).attr('href')).offset().top}, 500, 'linear');
 		  });
-		});
+		});*/
+
+		/*(window.alert(5 + 6);
+
+
+		//document.getElementById("demo").innerHTML = 5 + 6;
+
+		var username = "akshaya"
+		var password = "ravi"*/
+
+		function validatePassword(username, password){
+			window.alert("hi!");
+			var myClass = Java.type("Users⁩.student⁩.eclipse-workspace⁩.mhproj.src.Accounts")
+			//var vp = myClass.validatePassword(username, password);
+			window.alert("h");
+			//var acc = new Users⁩.student⁩.eclipse-workspace⁩.Misc..src.Accounts();
+			//var acc = new Packages.com.student.eclipse-workspace.src.Accounts();
+			//var acc = Users⁩.student⁩.eclipse-workspace⁩.mhproj.src.Accounts();
+			//var acc = Packages.Accounts();
+			//var acc = ‎⁨Packages.Users⁩.student⁩.Desktop⁩.mentalhealth⁩.Accounts();
+
+			//var acc = ‎⁨Packages.Users⁩.student⁩.Desktop⁩.mentalhealth⁩.Accounts().validatePassword(username, password);
+			window.alert("hello ");
+			//var tf = acc.validatePassword(username, password);
+			//window.alert("hello " + tf);
+
+			/*if(tf == true){
+				window.alert("Login successful");
+			} 
+			else{
+				window.alert("Login failed");
+			}*/
+			//return{
+				//5+6;
+				//result: tf;
+				//result: acc.validatePassword (username, password);
+			//}
+    		//return{
+    		//result: acc.validatePassword (username, password);
+    		//alert(result);
+    		//result = "hi";
+    		//}
+    		//return 5+6;
+    		//return 5 + 6
+		}
 	</script>
 </body>
 </html>
