--- a/quiz.html
+++ b/quiz.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,12 +62,10 @@
 </head>
 <body>
 <div id="centerbody">
-  <h1>Quiz on Mental Health</h1>
-  Quiz goes here
-  <br><br>
   <div class="quiz-container">
   <div id="quiz"></div>
-  
+
+  <script src="quiz.js"></script>
   </div>
   <button id="previous">Previous</button>
   <button id="next">Next</button>
