--- a/quiz.html
+++ b/quiz.html
@@ -125,7 +125,7 @@
   <div class="quiz-container">
   <div id="quiz"></div>
 
-  <script src="quiz.js"></script>
+  
       #centerbody h1{
         font-size: 100px;
       }
@@ -151,5 +151,6 @@
   <button id="submit">Submit Quiz</button>
   <div id="results"></div>
 </div>
+  <script src="depression_quiz.js"></script>
 </body>
 </html>
