--- a/anxiety_quiz.html
+++ b/anxiety_quiz.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
       body{
-        color: black;
-        font-family: Comfortaa;
-        background-color: #9bd7ff;
-        text-align: center;
-      }
-      #previous {
-      background-color: #005EA0; /* Light Blue */
-      border: none;
-      color: white;
         color: #FFFFF0;
         font-family: "Comfortaa", cursive;
         background-color: rgb(21, 50, 101);
@@ -77,7 +67,6 @@
       }
       #next {
       background-color: #153265; /* Blue */
-      border: none;
       border: solid #FFFFF0 1px;
       color: white;
       padding: 15px 32px;
@@ -89,7 +78,6 @@
       }
       #submit {
       background-color: #4A6A51; /* Green */
-      border: none;
       border: solid #FFFFF0 1px;
 
       color: white;
@@ -102,12 +90,6 @@
       }
       #centerbody{
         height: 200px;
-        width: 500px;
-        padding: 13% 5%;
-        background-color: #266097;
-        margin: 0;
-        position: absolute;
-        top: 50%;
         width: 75%;
         padding: 13% 5%;
         background-color: rgb(21, 50, 101);
@@ -118,14 +100,6 @@
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
       }
-    </style>
-</head>
-<body>
-<div id="centerbody">
-  <div class="quiz-container">
-  <div id="quiz"></div>
-
-  
       #centerbody h1{
         font-size: 100px;
       }
@@ -140,7 +114,7 @@
     </ul>
   </div>
 <div id="centerbody">
-  <h1>Quiz on Mental Health</h1>
+  <h1>Quiz on Anxiety</h1>
   Quiz goes here
   <br><br>
   <div class="quiz-container">
@@ -151,6 +125,7 @@
   <button id="submit">Submit Quiz</button>
   <div id="results"></div>
 </div>
-  <script src="depression_quiz.js"></script>
+  <script src="anxiety_quiz.js">
+
 </body>
 </html>
