--- a/anxiety_quiz.html
+++ b/anxiety_quiz.html
@@ -115,7 +115,7 @@
   </div>
 <div id="centerbody">
   <h1>Quiz on Anxiety</h1>
-  Quiz goes here
+  <script src="anxiety_quiz.js"></script>
   <br><br>
   <div class="quiz-container">
   <div id="quiz"></div>
