--- a/depression_quiz.html
+++ b/depression_quiz.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
       body{
+        color: black;
+        font-family: Comfortaa;
+        background-color: #9bd7ff;
+        text-align: center;
+      }
+      #previous {
+      background-color: #005EA0; /* Light Blue */
+      border: none;
+      color: white;
         color: #FFFFF0;
         font-family: "Comfortaa", cursive;
         background-color: rgb(21, 50, 101);
@@ -49,7 +59,7 @@
       color: rgb(0, 94, 160);
       display: block;
     }
-#about{
+    #about{
       padding-right: 50px;
     }
 
@@ -67,6 +77,7 @@
       }
       #next {
       background-color: #153265; /* Blue */
+      border: none;
       border: solid #FFFFF0 1px;
       color: white;
       padding: 15px 32px;
@@ -78,6 +89,7 @@
       }
       #submit {
       background-color: #4A6A51; /* Green */
+      border: none;
       border: solid #FFFFF0 1px;
 
       color: white;
@@ -90,6 +102,12 @@
       }
       #centerbody{
         height: 200px;
+        width: 500px;
+        padding: 13% 5%;
+        background-color: #266097;
+        margin: 0;
+        position: absolute;
+        top: 50%;
         width: 75%;
         padding: 13% 5%;
         background-color: rgb(21, 50, 101);
@@ -103,7 +121,34 @@
       #centerbody h1{
         font-size: 100px;
       }
-    </style>
+      .slide{
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        z-index: 1;
+        opacity: 0;
+        transition: opacity 0.5s;
+      }
+      .active-slide{
+        opacity: 1;
+        z-index: 2;
+      }
+      .quiz-container{
+        position: relative;
+        height: 200px;
+        margin-top: 40px;
+      }
+      .answers {
+        margin-bottom: 20px;
+        text-align: left;
+        display: inline-block;
+      }
+      .answers label{
+        display: block;
+        margin-bottom: 10px;
+      }
+  </style>
 </head>
 <body>
   <div id="nav">
@@ -114,9 +159,7 @@
     </ul>
   </div>
 <div id="centerbody">
-  <h1>Quiz on Depression</h1>
-  Quiz goes here
-  <br><br>
+  <h1>Quiz on Mental Health</h1>
   <div class="quiz-container">
   <div id="quiz"></div>
   </div>
@@ -125,7 +168,6 @@
   <button id="submit">Submit Quiz</button>
   <div id="results"></div>
 </div>
-  <script src="anxiety_quiz.js">
-
+  <script src="depression_quiz.js"></script>
 </body>
 </html>
