--- a/anxiety_quiz.html
+++ b/anxiety_quiz.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+      h1{}
       body{
         color: #FFFFF0;
         font-family: "Comfortaa", cursive;
@@ -109,23 +110,24 @@
   <div id="nav">
     <a href = "index.html"> <h1>Mental Health Quiz</h1> </a>
     <ul>
-      <li id="about"><a href="#">ABOUT</a></li>
-      <li id="thispage"><a href="#">TAKE THE QUIZ</a></li>
+      <li id="about"><a href="about.html">ABOUT</a></li>
+      <li id="thispage"><a href="index.html">HOME</a></li>
     </ul>
   </div>
 <div id="centerbody">
-  <h1>Quiz on Anxiety</h1>
-  <script src="anxiety_quiz.js"></script>
-  <br><br>
+  <h1>Quiz on Depression</h1>
+  <br>
   <div class="quiz-container">
   <div id="quiz"></div>
+  <script src="depression_quiz.js"></script>
+
   </div>
   <button id="previous">Previous</button>
   <button id="next">Next</button>
   <button id="submit">Submit Quiz</button>
   <div id="results"></div>
-</div>
-  <script src="anxiety_quiz.js">
+  </div>
+
 
 </body>
 </html>
