anxiety and depression fixed

--- a/anxiety_quiz.html
+++ b/anxiety_quiz.html
@@ -115,11 +115,11 @@
     </ul>
   </div>
 <div id="centerbody">
-  <h1>Quiz on Depression</h1>
+  <h1>Quiz on Anxiety</h1>
   <br>
   <div class="quiz-container">
   <div id="quiz"></div>
-  <script src="depression_quiz.js"></script>
+  <script src="anxiety_quiz.js"></script>
 
   </div>
   <button id="previous">Previous</button>
