--- a/depression_quiz.html
+++ b/depression_quiz.html
@@ -159,9 +159,11 @@
     </ul>
   </div>
 <div id="centerbody">
-  <h1>Quiz on Mental Health</h1>
+  <h1>Quiz on Depression</h1>
+  <br>
   <div class="quiz-container">
   <div id="quiz"></div>
+  <script src="depression_quiz.js"></script>
   </div>
   <button id="previous">Previous</button>
   <button id="next">Next</button>
