--- a/depression_quiz.html
+++ b/depression_quiz.html
@@ -8,9 +8,9 @@
     <title>Document</title>
     <style>
       body{
-        color: black;
+        color: #FFFFF0;
         font-family: Comfortaa;
-        background-color: #9bd7ff;
+        background-color: rgb(21, 50, 101);
         text-align: center;
       }
       #previous {
@@ -86,6 +86,7 @@
       display: inline-block;
       font-size: 16px;
       font-family: Comfortaa;
+      margin-bottom: 50px;
       }
       #submit {
       background-color: #4A6A51; /* Green */
@@ -140,7 +141,6 @@
         margin-top: 40px;
       }
       .answers {
-        margin-bottom: 20px;
         text-align: left;
         display: inline-block;
       }
@@ -148,6 +148,30 @@
         display: block;
         margin-bottom: 10px;
       }
+
+      #results{
+        margin-top: 50px;
+        margin-bottom: 20px;
+      }
+      /*footer{
+      margin-top: 100px;
+      height: 30px;
+      width: 100%;
+      background-color: rgb(21, 50, 101);
+      padding-top: 10px;
+      padding-bottom: 5px;
+      bottom: 0;
+      margin-bottom: 0;
+      clear: both;
+      color: rgb(255, 255, 240);
+    }
+    footer p{
+      text-align: center;
+      color: rgb(255, 255, 240);
+    }
+    footer a{
+      text-decoration: none;
+    }*/
   </style>
 </head>
 <body>
@@ -160,10 +184,8 @@
   </div>
 <div id="centerbody">
   <h1>Quiz on Depression</h1>
-  <br>
   <div class="quiz-container">
   <div id="quiz"></div>
-  <script src="depression_quiz.js"></script>
   </div>
   <button id="previous">Previous</button>
   <button id="next">Next</button>
