--- a/depression_quiz.html
+++ b/depression_quiz.html
@@ -190,7 +190,7 @@
     <ul>
       <li id="about"><a href="about.html">ABOUT</a></li>
       <li id="thispage"><a href="depression-quiz.html">TAKE THE DEPRESSION QUIZ</a></li>
-      <li><a href="anxiety-quiz.html">TAKE THE ANXIETY QUIZ</a></li>
+      <li><a href="anxiety_quiz.html">TAKE THE ANXIETY QUIZ</a></li>
     </ul>
   </div>
 <div id="centerbody">
