--- a/depression_quiz.html
+++ b/depression_quiz.html
@@ -189,7 +189,7 @@
     <a href = "index.html"> <h1>Mental Health Quiz</h1> </a>
     <ul>
       <li id="about"><a href="about.html">ABOUT</a></li>
-      <li id="thispage"><a href="depression-quiz.html">TAKE THE DEPRESSION QUIZ</a></li>
+      <li id="thispage"><a href="depression_quiz.html">TAKE THE DEPRESSION QUIZ</a></li>
       <li><a href="anxiety_quiz.html">TAKE THE ANXIETY QUIZ</a></li>
     </ul>
   </div>
