--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
 		<!--<a href="index.html"> <img src="images/AR.png"> </a>-->
 		<a href = "index.html"> <h1>Mental Health Quiz</h1> </a>
 		<ul>
-			<li id="about"><a href="#">ABOUT</a></li>
+			<li id="about"><a href="about.html">ABOUT</a></li>
+			<li id="about"><a href="resources.html">RESOURCES</a></li>
 			<li><a href="quiz.html">TAKE THE QUIZ</a></li>
 		</ul>
 	</div>
