--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
 		<a href = "index.html"> <h1>Mental Health Quiz</h1> </a>
 		<ul>
 			<li id="about"><a href="about.html">ABOUT</a></li>
-			<li id="about"><a href="resources.html">RESOURCES</a></li>
+			<li><a href="resources.html">RESOURCES</a></li>
 			<li><a href="quiz.html">TAKE THE QUIZ</a></li>
 		</ul>
 	</div>
