--- a/depression_quiz.html
+++ b/depression_quiz.html
@@ -189,8 +189,8 @@
     <a href = "index.html"> <h1>Mental Health Quiz</h1> </a>
     <ul>
       <li id="about"><a href="about.html">ABOUT</a></li>
-      <li id="thispage"><a href="depression_quiz.html">TAKE THE DEPRESSION QUIZ</a></li>
-      <li><a href="anxiety_quiz.html">TAKE THE ANXIETY QUIZ</a></li>
+			<li><a href="resources.html">RESOURCES</a></li>
+			<li><a href="quiz.html">TAKE THE QUIZ</a></li>
     </ul>
   </div>
 <div id="centerbody">
