--- a/resources.html
+++ b/resources.html
@@ -233,10 +233,9 @@
 		<!--<a href="index.html"> <img src="images/AR.png"> </a>-->
 		<a href = "index.html"> <h1>Mental Health Quiz</h1> </a>
 		<ul>
-			<li id="about"><a href="#">ABOUT</a></li>
-			<li><a href="#">RESOURCES</a></li>
-			<li><a href="#">TAKE THE DEPRESSION QUIZ</a></li>
-			<li><a href="#">TAKE THE ANXIETY QUIZ</a></li>
+			<li id="about"><a href="about.html">ABOUT</a></li>
+			<li><a href="resources.html">RESOURCES</a></li>
+			<li><a href="quiz.html">TAKE THE QUIZ</a></li>
 		</ul>
 	</div>
 
