--- a/resources.html
+++ b/resources.html
@@ -295,7 +295,7 @@
 
 	
 	<footer>
-		<a href = "index.html"> <p>Back to top</p> </a>
+		<a href = "resources.html"> <p>Back to top</p> </a>
 	</footer>
 
 
