--- a/about.html
+++ b/about.html
@@ -302,7 +302,7 @@ Possible causes include a combination of biological, psychological, and social s
 		</div>
 	</div>
 	<footer>
-		<a href = "index.html"> <p>Back to top</p> </a>
+		<a href = "about.html"> <p>Back to top</p> </a>
 	</footer>
 
 
