--- a/quiz.html
+++ b/quiz.html
@@ -311,7 +311,7 @@
 	</div>
 
 	<footer>
-		<a href = "index.html"> <p>Back to top</p> </a>
+		<a href = "quiz.html"> <p>Back to top</p> </a>
 	</footer>
 
 
