--- a/quiz.html
+++ b/quiz.html
@@ -266,14 +266,14 @@
 
 		<h1> Options </h1>
 		<h1> _________________ </h1>
-		<p> Take a quiz for anxiety, depression, or lonliness during this pandemic. </p>
+		<p> Take a quiz for anxiety, depression, or loneliness during this pandemic. </p>
 	</div>
 
 	<div id="top-boxes">
 		<div class="container">
 		  <div class = "image">
 		  	<h1> Anxiety </h1>
-		  	<p> Feeling restless or irritable? Not able to concenttrate or always tired? take this quiz to find out if you could have anxiety. </p>
+		  	<p> Feeling restless or irritable? Not able to concentrate or always tired? take this quiz to find out if you could have anxiety. </p>
 		  	<a href="anxiety_quiz.html"><p> Click here to take this quiz. </p> </a>
 		  </div>
 		  <!--<div class="overlay">
@@ -299,7 +299,7 @@
 		<div class="container">
 		  <div class = "image">
 		  	<h1> Lonliness </h1>
-		  	<p> Feeling lonely during these tough times? Take this quiz to find out if you are experiencing that. </p>
+		  	<p> Feeling lonely during this quarantine? Take this quiz to find out if you are experiencing that. </p>
 		  	<a href="loneliness_quiz.html"><p> Click here to take this quiz. </p> </a>
 		  </div>
 		  <!--<div class="overlay">
