--- a/quiz.html
+++ b/quiz.html
@@ -298,7 +298,7 @@
 
 		<div class="container">
 		  <div class = "image">
-		  	<h1> Lonliness </h1>
+		  	<h1> Loneliness </h1>
 		  	<p> Feeling lonely during this quarantine? Take this quiz to find out if you are experiencing that. </p>
 		  	<a href="loneliness_quiz.html"><p> Click here to take this quiz. </p> </a>
 		  </div>
