--- a/resources.html
+++ b/resources.html
@@ -186,7 +186,7 @@
 		  height: 100%;
 		  width: 100%;
 		  opacity: 0;
-		  transition: .5s ease;
+		  transition: .4s ease;
 		  background-color: #FFFFF0;
 		}
 
@@ -257,7 +257,7 @@
 
 		<h1> Hotlines for the US </h1>
 		<h1> _________________ </h1>
-		<p> Learn more about anxiety, depression, and what to do if you need help. </p>
+		<p> Learn more about anxiety, depression, and what to do if you need help. Hover over the box to reveal. </p>
 	</div>
 
 	<div id="top-boxes">
@@ -279,7 +279,40 @@
 		<div class="container">
 		  <!--<img src="images/heart.jpg" alt="Avatar" class="image">-->
 		  <div class = "image">
+		  	<h1> General Support </h1>
+		  </div>
+		  <div class="overlay">
+		    <div class="text">
+		    	<h1> Our mental health tips! </h1>
+		    	<p> Go to this site and tell us how you feel. Based on that, we'll give you some tips to make you feel a bit better for the time being. </p>
+		    	<a href="tracker.html"><p> Click here! </p> </a>  
+		    	<p> *If possible, contact a licensed health professional immediately for treatment.* </p>
+			</div>
+		  </div>
+		</div>
+	</div>
+
+	<div id="top-boxes">
+		<div class="container">
+		  <!--<img src="images/heart.jpg" alt="Avatar" class="image">-->
+		  <div class = "image">
 		  	<h1> Anxiety and Depression</h1>
+		  </div>
+		  <div class="overlay">
+		    <div class="text">
+		    	<h1> National Anxiety and Depression Hotline </h1>
+		    	<p> National Suicide Prevention Phone Hotline: 1-800-662-HELP (4357) </p>
+		    	<p> National Suicide Prevention Text Hotline: 1-800-487-4889 </p>
+		    	<a href="https://www.samhsa.gov/find-help/national-helpline"><p> Website: https://www.samhsa.gov/find-help/national-helpline </p> </a>  
+		    	<p> If possible, contact a licensed health professional immediately for treatment. </p>
+			</div>
+		  </div>
+		</div>
+
+		<div class="container">
+		  <!--<img src="images/heart.jpg" alt="Avatar" class="image">-->
+		  <div class = "image">
+		  	<h1> Loneliness </h1>
 		  </div>
 		  <div class="overlay">
 		    <div class="text">
