--- a/resources.html
+++ b/resources.html
@@ -316,9 +316,8 @@
 		  </div>
 		  <div class="overlay">
 		    <div class="text">
-		    	<h1> National Anxiety and Depression Hotline </h1>
-		    	<p> National Suicide Prevention Phone Hotline: 1-800-662-HELP (4357) </p>
-		    	<p> National Suicide Prevention Text Hotline: 1-800-487-4889 </p>
+		    	<h1> National Hotline </h1>
+		    	<p> Try contacting a professional or a loved one for help. Otherwise, try doing things that you like to take your mind off of this feeling. If you still feel this way, contact the website below for more assistance. </p>
 		    	<a href="https://www.samhsa.gov/find-help/national-helpline"><p> Website: https://www.samhsa.gov/find-help/national-helpline </p> </a>  
 		    	<p> If possible, contact a licensed health professional immediately for treatment. </p>
 			</div>
