--- a/anxiety_quiz.html
+++ b/anxiety_quiz.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
       body{
+        color: #FFFFF0;
+        font-family: Comfortaa;
+        background-color: rgb(21, 50, 101);
+        text-align: center;
+      }
+      #previous {
+      background-color: #005EA0; /* Light Blue */
+      border: none;
+      color: white;
         color: #FFFFF0;
         font-family: "Comfortaa", cursive;
         background-color: rgb(21, 50, 101);
@@ -49,7 +59,7 @@
       color: rgb(0, 94, 160);
       display: block;
     }
-#about{
+    #about{
       padding-right: 50px;
     }
 
@@ -67,6 +77,7 @@
       }
       #next {
       background-color: #153265; /* Blue */
+      border: none;
       border: solid #FFFFF0 1px;
       color: white;
       padding: 15px 32px;
@@ -75,9 +86,11 @@
       display: inline-block;
       font-size: 16px;
       font-family: Comfortaa;
+      margin-bottom: 50px;
       }
       #submit {
       background-color: #4A6A51; /* Green */
+      border: none;
       border: solid #FFFFF0 1px;
 
       color: white;
@@ -90,6 +103,12 @@
       }
       #centerbody{
         height: 200px;
+        width: 500px;
+        padding: 13% 5%;
+        background-color: #266097;
+        margin: 0;
+        position: absolute;
+        top: 50%;
         width: 75%;
         padding: 13% 5%;
         background-color: rgb(21, 50, 101);
@@ -103,7 +122,67 @@
       #centerbody h1{
         font-size: 100px;
       }
-    </style>
+      .slide{
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        z-index: 1;
+        opacity: 0;
+        transition: opacity 0.5s;
+        font-size: 30px;
+        font-weight: 20px;
+      }
+      .active-slide{
+        opacity: 1;
+        z-index: 2;
+      }
+      .quiz-container{
+        position: relative;
+        height: 200px;
+        margin-top: 40px;
+      }
+      .answers {
+        text-align: left;
+        display: inline-block;
+        font-size: 20px;
+        margin-top: 20px;
+      }
+      .answers label{
+        display: block;
+        margin-bottom: 10px;
+      }
+
+      #results{
+        margin-top: 50px;
+        margin-bottom: 20px;
+      }
+      #previous{
+        margin-top: 20px;
+      }
+      #next{
+        margin-top: 30px;
+      }
+      /*footer{
+      margin-top: 100px;
+      height: 30px;
+      width: 100%;
+      background-color: rgb(21, 50, 101);
+      padding-top: 10px;
+      padding-bottom: 5px;
+      bottom: 0;
+      margin-bottom: 0;
+      clear: both;
+      color: rgb(255, 255, 240);
+    }
+    footer p{
+      text-align: center;
+      color: rgb(255, 255, 240);
+    }
+    footer a{
+      text-decoration: none;
+    }*/
+  </style>
 </head>
 <body>
   <div id="nav">
@@ -115,19 +194,16 @@
     </ul>
   </div>
 <div id="centerbody">
-  <h1>Quiz on Anxiety</h1>
-  <br>
+  <h1>Quiz on Depression</h1>
   <div class="quiz-container">
-  <div id="quiz"></div>
-  <script src="anxiety_quiz.js"></script>
 
+  <div id="quiz"></div>
   </div>
   <button id="previous">Previous</button>
   <button id="next">Next</button>
   <button id="submit">Submit Quiz</button>
   <div id="results"></div>
-  </div>
-
-
+</div>
+  <script src="anxiety_quiz.js"></script>
 </body>
 </html>
