--- a/about.html
+++ b/about.html
@@ -296,7 +296,7 @@ Possible causes include a combination of biological, psychological, and social s
 		  <div class="overlay">
 		    <div class="text">
 		    	<h1> What's the next step? </h1>
-		    	<p> Since we are not healthcare professionals, the next step is to get into contact with a licensed professional. There, they can really diagnose you for a mental health issue, and they can make you feel better by giving you the right treatments. </p>
+		    	<p> Since we are not healthcare professionals, the next step is to get into contact with a professional. There, they can really diagnose you for a mental health issue, and they can make you feel better by giving you the right treatments. </p>
 			</div>
 		  </div>
 		</div>
