--- a/about.html
+++ b/about.html
@@ -274,7 +274,7 @@ Treatment includes counseling or medications, including antidepressants. </p>
 		    <div class="text">
 		    	<h1> Depression </h1>
 		    	<p> A mental health disorder characterized by persistently depressed mood or loss of interest in activities, causing significant impairment in daily life.
-Possible causes include a combination of biological, psychological, and social sources of distress. You may feel sad for a long period of time or lose interest in things that you normally love doing, both of which are the most well known symptoms of depression. This can lead to many other behavioral or physical symptoms, including changes in sleep, appetit, energy level, concentration, daily behavior, or self-esteem. Depression can also be associated with thoughts of suicide. You can try a new hobby like gardening during this quarantine, exercising, taking walks, and making social groups.</p>
+Possible causes include a combination of biological, psychological, and social sources of distress. You may feel sad for a long period of time or lose interest in things that you normally love doing, both of which are the most well known symptoms of depression. This can lead to many other behavioral or physical symptoms, including changes in sleep, appetit, energy level, concentration, daily behavior, or self-esteem. Depression can also be associated with thoughts of suicide. You can try a new hobby like gardening during this quarantine, exercising, and taking walks.</p>
 			</div>
 		  </div>
 		</div>
