--- a/tracker.html
+++ b/tracker.html
@@ -189,6 +189,8 @@
       min-width: 16px;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       z-index: 1;
+      max-width: 300px;
+      margin: auto;
     }
 
     .dropdown-content a {
@@ -228,6 +230,7 @@
     footer a{
       text-decoration: none;
     }*/
+
   </style>
 </head>
 <body>
