--- a/tracker.html
+++ b/tracker.html
@@ -207,9 +207,9 @@
     .resolution {
       display: none;
       padding: 10px 20px;
-      border: 2px solid black;
-      border-top: none;
-      background-color: #00CC00;
+      border: 2px #FFFFF0 solid;
+      background-color: #153265;
+      margin-bottom: 50px;
     }
       /*footer{
       margin-top: 100px;
