--- a/tracker.html
+++ b/tracker.html
@@ -238,8 +238,8 @@
     <a href = "index.html"> <h1>Mental Health Quiz</h1> </a>
     <ul>
       <li id="about"><a href="about.html">ABOUT</a></li>
-      <li id="thispage"><a href="depression-quiz.html">RESOURCES</a></li>
-      <li><a href="anxiety-quiz.html">TAKE THE QUIZ</a></li>
+      <li id="thispage"><a href="resources.html">RESOURCES</a></li>
+      <li><a href="quiz.html">TAKE THE QUIZ</a></li>
     </ul>
   </div>
   <div id="centerbody">
