--- a/tracker.html
+++ b/tracker.html
@@ -319,6 +319,45 @@
     <div class="resolution" id="fatigued">
       fatigued - Oh, I'm sorry you feel that way. If you are fatigued, try taking a nap, eating a good meal, or doing something relaxing. Often times it is better to take a break and complete something at a later time when you are not fatigued.
     </div>
+    <div class="resolution" id="grateful">
+      grateful - It's great that you feel that way! Talk to your loved ones and do something nice for them today. This can even be as small as just calling them and saying a thank you.
+    </div>
+    <div class="resolution" id="close">
+      close - That’s great! Talk to your loved ones about how you feel. I’m sure they’ll love to hear it!
+    </div>
+    <div class="resolution" id="distant">
+      distant - Oh, I’m sorry you feel that way. Talk to your loved ones or do something relaxing to take you mind off of this. Remember, communication is key here.
+    </div>
+    <div class="resolution" id="envious">
+      envious - Oh, I’m sorry you feel that way. If you feel envy, talk to your loved ones about this and why you feel that way. Communication always makes you feel better!
+    </div>
+    <div class="resolution" id="resentful">
+      resentful - I’m sorry you feel that way. Sometimes, communication is what’s necessary to clear up any resent. And, if you don’t feel comfortable doing that, try doing something relaxing to calm yourself down.
+    </div>
+    <div class="resolution" id="reclusive">
+      reclusive - I’m sorry you feel that way. Get in touch with your loved ones, because they would love to hear from you!
+    </div>
+    <div class="resolution" id="proud">
+      proud - That’s great! Using that pride, do something you enjoy, some work you have to finish, or just take a break from everything and go outside for a minute.
+    </div>
+    <div class="resolution" id="loving">
+      loving - That’s great! Tell your loved how you feel, I’m sure they’re love to hear it!
+    </div>
+    <div class="resolution" id="peaceful">
+      peaceful - That’s great! Using that peace, do something relaxing, go outside, or do some work that you’ve been trying to finish up.
+    </div>
+    <div class="resolution" id="worried">
+      worried - I’m sorry you feel that way. Try taking a walk, doing something you enjoy, or just talking to a loved one or professional.
+    </div>
+    <div class="resolution" id="hearty">
+      hearty - That’s great! Talk to your loved ones or do something you enjoy.
+    </div>
+    <div class="resolution" id="welcome">
+      welcome - That’s great! Tell your loved ones about how you feel and try to do something nice for them in return!
+    </div>
+    <div class="resolution" id="annoyed">
+      annoyed - I’m sorry you feel that way. Try taking a walk, meditating, or doing something you enjoy to calm down a little. Then, communicate with those who make you feel annoyed, with a loved one, or with a professional so that you no longer feel annoyed.
+    </div>
   </div>
   <script src="tracker.js"></script>
 </body>
