--- a/tracker.html
+++ b/tracker.html
@@ -267,19 +267,19 @@
     <div class="feelings_dropdown">
       <button onclick="showFeelingsDrop()" class="dropdownbutton">How do you feel towards others?</button>
       <div id="getAlong" class="dropdown-content">
-        <a href="#">Grateful</a>
-        <a href="#">Close</a>
-        <a href="#">Distant</a>
-        <a href="#">Envious</a>
-        <a href="#">Resentful</a>
-        <a href="#">Reclusive</a>
-        <a href="#">Proud</a>
-        <a href="#">Loving</a>
-        <a href="#">Peaceful</a>
-        <a href="#">Worried</a>
-        <a href="#">Hearty</a>
-        <a href="#">Welcome</a>
-        <a href="#">Annoyed</a>
+        <a onclick="showResults('grateful')">Grateful</a>
+        <a onclick="showResults('close')">Close</a>
+        <a onclick="showResults('distant')">Distant</a>
+        <a onclick="showResults('envious')">Envious</a>
+        <a onclick="showResults('resentful')">Resentful</a>
+        <a onclick="showResults('reclusive')">Reclusive</a>
+        <a onclick="showResults('proud')">Proud</a>
+        <a onclick="showResults('loving')">Loving</a>
+        <a onclick="showResults('peaceful')">Peaceful</a>
+        <a onclick="showResults('worried')">Worried</a>
+        <a onclick="showResults('hearty')">Hearty</a>
+        <a onclick="showResults('welcome')">Welcome</a>
+        <a onclick="showResults('annoyed')">Annoyed</a>
       </div>
     </div>
     <br>
@@ -361,4 +361,3 @@
   </div>
   <script src="tracker.js"></script>
 </body>
-</html>
