--- a/index.html
+++ b/index.html
@@ -233,16 +233,26 @@
 			padding-top: 10px;
 			padding-bottom: 5px;
 			bottom: 0;
-			margin-bottom: 0;
+			margin-bottom: 10px;
 			clear: both;
 			color: rgb(255, 255, 240);
 		}
 		footer p{
 			text-align: center;
 			color: rgb(255, 255, 240);
+			margin-top: 10px;
 		}
 		footer a{
 			text-decoration: none;
+		}
+		footer img{
+			height: 50px;
+			margin: auto;
+			display: block;
+			margin-left: auto;
+			amgin-right: auto;
+			margin-bottom: 10px;
+			margin-top: 10px;
 		}
 	</style>
 </head>
@@ -300,6 +310,8 @@
 		</div>
 	</div>
 	<footer>
+		<p> Please consider donating - it really helps us out! </p>
+		<a href="https://www.paypal.com/"> <img src="images/paypal.png"> </a>
 		<a href = "index.html"> <p>Back to top</p> </a>
 	</footer>
 
