--- a/tracker.html
+++ b/tracker.html
@@ -171,6 +171,7 @@
       font-size: 16px;
       border: none;
       cursor: pointer;
+      font-family: Comfortaa;
     }
 
     .dropdownbutton:hover, .dropbtn:focus {
